tests/output/self_hosted/duplicate_case_error.txt
tests/duplicate_case_error.oomph:5: error: switch has multiple cases for Str

    case Str _:
    ^^^^

